# projects-cli

./: Cargo.toml  Readme.md
src/: config.rs  main.rs  utils.rs
src/commands/: list.rs  mod.rs  remove.rs  select.rs  track.rs
src/commands/init/: mod.rs  projects.bash
