[package]
name = "projects"
version = "1.0.2-alpha.0"
authors = ["Michael Mullins <michael@webdesserts.com>"]
description = "A tool for tracking, searching for, and jumping to your projects."
repository = "https://github.com/webdesserts/projects-cli.git"
website = "https://github.com/webdesserts/projects-cli"
license = "MIT"
edition = "2018"

[dependencies]
structopt = "^0.2"
serde = { version = "^1", features = ["derive"] }
failure = "^0.1"
exitfailure = "^0.5"
webdesserts-confy = "^1"
skim = "^0.6"
dialoguer = "0.5.0"
