[package]
name = "projects"
version = "1.1.1"
authors = ["Michael Mullins <michael@webdesserts.com>"]
description = "A tool for tracking, searching, and jumping to your projects."
repository = "https://github.com/webdesserts/projects-cli.git"
homepage = "https://github.com/webdesserts/projects-cli"
documentation = "https://github.com/webdesserts/projects-cli/blob/master/Readme.md"
readme = "Readme.md"
license = "MIT"
edition = "2018"

keywords = [
  "cd", "directories", "projects", "cli"
]
categories = [
  "Command line utilities"
]

[dependencies]
structopt = "^0.2"
serde = { version = "^1", features = ["derive"] }
failure = "^0.1"
exitfailure = "^0.5"
webdesserts-confy = "^1"
skim = "^0.6"
dialoguer = "0.5.0"
